--- a/src/components/UI/MarkdownEditor/index.scss
+++ b/src/components/UI/MarkdownEditor/index.scss
@@ -43,15 +43,15 @@
   .button-active {
     background-color: #2b6aa8;
   }
-  #editor-text-area {
-    min-height: 40px;
-    width: 99%;
+  .editor-text-area {
+    width: 94%;
     resize: none;
     background-color: rgb(243, 243, 243);
     cursor: pointer;
     border: none;
+    padding: 15px;
   }
-  #editor-text-area:focus {
+  .editor-text-area:focus {
     height: 150px;
     cursor: initial;
     background-color: white;
