--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -46,7 +46,7 @@
             margin-top: 5px;
           }
           #vote-container {
-            .vote-counter {
+            .vote-tracker {
               width: 30px;
               height: 17px;
             }
