Make tags shorter height. Make Modal scroll through app. Make epoch time into dates for comments

--- a/src/components/UI/BoardComponents/Tags/index.scss
+++ b/src/components/UI/BoardComponents/Tags/index.scss
@@ -8,14 +8,16 @@
     align-content: center;
     li {
       margin: 5px 5px 5px 0;
+      display: flex;
+      align-items: center;
       div {
         display: flex;
         align-items: center;
         justify-content: center;
         min-width: 50px;
         max-width: 100px;
-        max-height: 25px;
-        height: 25px;
+        max-height: 15px;
+        height: 15px;
         font-size: 12px;
         padding: 2px 5px;
         color: #fff;
