Add Version component for /version. Fix some warnings.

--- a/src/components/UI/AddComponents/AddTag/components/CreateTag/index.scss
+++ b/src/components/UI/AddComponents/AddTag/components/CreateTag/index.scss
@@ -3,7 +3,7 @@
   .create-tag-inputs {
     display: flex;
     flex-direction: column;
-    align-items: start;
+    align-items: flex-start;
     padding: 15px;
     label {
       display: flex;
