--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -2,7 +2,7 @@
   border: 1px solid lightgrey;
   padding: 5px;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
   background-color: white;
   flex-direction: column;
   box-shadow: 0 1px 0px rgba(0, 0, 0, 0.16), 0 2px 6px rgba(0, 0, 0, 0.23);
