--- a/src/components/UI/Navbar/components/Create/AddColumnWrapper/index.scss
+++ b/src/components/UI/Navbar/components/Create/AddColumnWrapper/index.scss
@@ -4,7 +4,7 @@
     .input-container {
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
       padding: 15px;
       label {
         display: flex;
