--- a/src/components/UI/MarkdownEditor/Editor/index.scss
+++ b/src/components/UI/MarkdownEditor/Editor/index.scss
@@ -138,13 +138,26 @@
       font-size: 0.8em;
     }
 
-    .editor-activity-text {
-      display: inline-block;
-      border: 1px solid rgb(153, 153, 153);
-      padding: 10px;
-      border-radius: 5px;
-      background-color: white;
-      cursor: pointer;
+    .editor-activity-text-container {
+      display: flex;
+      flex-direction: column;
+      .editor-activity-text {
+        display: inline-block;
+        border: 1px solid rgb(153, 153, 153);
+        padding: 10px;
+        border-radius: 5px;
+        background-color: white;
+        cursor: pointer;
+        resize: none;
+        max-width: 94%;
+      }
+      .editor-activity-text:focus {
+        cursor: initial;
+      }
+      .edit-comment-save {
+        margin: 5px 0 0 0;
+        width: 100px;
+      }
     }
 
     .editor-activity-actions {
