Update Nav Modal to use reusable Modal. Update add card title input background color.

--- a/src/components/UI/Navbar/components/Create/AddCardWrapper/index.scss
+++ b/src/components/UI/Navbar/components/Create/AddCardWrapper/index.scss
@@ -7,23 +7,8 @@
   flex-grow: 1;
   .markdown-modes {
     #editor-mode {
-      .editor-id,
-      .editor-title,
-      .editor-description,
-      .editor-comments {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-    }
-    #preview-mode {
-      .preview-id,
-      .preview-title,
-      .preview-description,
-      .preview-tags {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
+      #editor-title {
+        background-color: #f3f3f3;
       }
     }
   }
