Add in current user votes.

--- a/src/components/UI/BoardComponents/Voting/index.scss
+++ b/src/components/UI/BoardComponents/Voting/index.scss
@@ -7,6 +7,7 @@
   .vote-thumbs-container {
     .vote-tracker {
       height: 20px;
+      padding: 0 5px;
       border: 1px solid lightgray;
       background-color: #f6faf9;
       border-radius: 3px;
