--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -47,7 +47,7 @@
           }
           #vote-container {
             .vote-tracker {
-              width: 30px;
+              padding: 0 5px;
               height: 17px;
             }
           }
