Update voting look. Update column width.

--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -47,7 +47,7 @@
           }
           #vote-container {
             .vote-tracker {
-              padding: 0 5px;
+              padding: 3px 5px;
               height: 17px;
             }
           }
