--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -1,7 +1,7 @@
 .navbar-list {
   align-items: center;
   box-shadow: 5px 10px 20px -20px rgb(97, 186, 253);
-  background-color: #f6faf9;
+  background-color: #eef1f5;
   ul.menu {
     height: 45px;
     margin: 0 auto;
