--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,13 @@
 html {
-  height: 100vh;
+  height: 100%;
 }
 body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   font-family: "Roboto", sans-serif;
 }
 
 #root,
 #app-container {
-  height: 100vh;
+  height: 100%;
 }
