--- a/src/components/Views/Base/Base.scss
+++ b/src/components/Views/Base/Base.scss
@@ -1,8 +1,12 @@
 #base-container {
-  height: 95%;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
 }
 #views-base {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   background-image: linear-gradient(
     to bottom,
     #7494c6,
@@ -19,4 +23,10 @@
       background-color: #f5faf8;
     }
   }
+}
+
+#views-base-container {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
