--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -2,6 +2,7 @@
   align-items: center;
   box-shadow: 5px 10px 20px -20px rgb(97, 186, 253);
   background-color: #eef1f5;
+  border: 1px solid #d4d6d6;
   ul.menu {
     height: 45px;
     margin: 0 auto;
@@ -45,6 +46,9 @@
       transition: background-color 0.2s ease;
       box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23),
         2px 3px 6px rgba(0, 0, 0, 0.43);
+    }
+    .active-filter {
+      padding-right: 118px;
     }
   }
   ul > li:not(:first-child):not(.brand) {
