--- a/src/components/Views/Base/Base.scss
+++ b/src/components/Views/Base/Base.scss
@@ -16,17 +16,16 @@
     #b5d2ff
   );
   .views-group-name {
-    margin: 10px;
+    border: 1px solid #d4d6d6;
+    padding: 5px 10px;
     .views-group-name-title {
-      border: 1px solid lightgray;
-      padding: 10px;
-      background-color: #f5faf8;
+      writing-mode: vertical-rl;
+      padding-top: 10px;
     }
   }
 }
 
 #views-base-container {
   display: flex;
-  flex-direction: column;
   flex-grow: 1;
 }
