--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -2,21 +2,24 @@
   align-items: center;
   box-shadow: 5px 10px 20px -20px rgb(97, 186, 253);
   background-color: #eef1f5;
-  border: 1px solid #d4d6d6;
+  border-bottom: 1px solid #d4d6d6;
   ul.menu {
-    height: 45px;
     margin: 0 auto;
     align-items: center;
-    padding: 0;
+    padding: 5px;
     list-style: none;
+    font-family: "Playfair Display", serif;
     display: flex;
     .brand {
+      font-size: 3em;
+      letter-spacing: 3px;
       margin-left: auto;
       margin-right: auto;
-    }
-    .user {
-      padding: 12px;
-      border-bottom: 1px solid #d4d6d6;
+      font-style: italic;
+      font-weight: 600;
+      .icon-title > span {
+        margin-top: 0;
+      }
     }
     .placeholder {
       width: 146px;
@@ -28,14 +31,27 @@
       box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.16),
         2px 3px 6px rgba(0, 0, 0, 0.23);
     }
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
     li > span {
       margin-left: 5px;
     }
     li {
-      padding: 0 10px;
-      height: 100%;
+      padding: 10px;
       display: flex;
       align-items: center;
+      .icon-title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        span {
+          margin-top: 5px;
+        }
+      }
+      border-radius: 5px 20px;
+      margin: 0 5px;
     }
     li:not(.brand) {
       cursor: pointer;
@@ -48,10 +64,7 @@
         2px 3px 6px rgba(0, 0, 0, 0.43);
     }
     .active-filter {
-      padding-right: 118px;
+      padding-right: 77px;
     }
-  }
-  ul > li:not(:first-child):not(.brand) {
-    border: 1px solid #d4d6d6;
   }
 }
