--- a/src/components/UI/MarkdownEditor/MarkdownEditor.scss
+++ b/src/components/UI/MarkdownEditor/MarkdownEditor.scss
@@ -1,3 +1,11 @@
+#preview-mode {
+  border: 1px solid lightgray;
+  height: 95%;
+  overflow-y: auto;
+  padding: 10px;
+  cursor: pointer;
+}
+
 #markdown-editor {
   display: flex;
   width: 100%;
