--- a/src/components/UI/BoardComponents/Card/CardEditor.scss
+++ b/src/components/UI/BoardComponents/Card/CardEditor.scss
@@ -1,10 +1,39 @@
 #editor-mode {
+  width: 100%;
   height: 100%;
+
+  #editor-title {
+    font-weight: 600;
+    flex-grow: 1;
+    font-size: 1.8em;
+  }
+
+  textarea {
+    resize: none;
+    border: none;
+    padding: 5px;
+  }
+  .editor-description {
+    max-height: 250pt;
+    min-height: 50pt;
+    textarea {
+      resize: vertical;
+    }
+  }
+  .editable,
+  textarea:focus {
+    background-color: rgb(255, 255, 255);
+  }
+  .editable,
+  textarea {
+    background-color: rgb(243, 243, 243);
+  }
   .editor-container {
     display: flex;
     margin-bottom: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid black;
+    min-height: 2em;
   }
 
   .flex-row {
@@ -27,18 +56,6 @@
 
   .row-margin {
     margin-bottom: 5px;
-  }
-
-  #editor-title {
-    background-color: rgb(255, 255, 255);
-    width: 80%;
-    padding: 5px;
-    font-size: 1.3em;
-    font-weight: 600;
-    cursor: pointer;
-  }
-  #editor-title:focus {
-    border: none;
   }
 
   .editor-header {
@@ -71,7 +88,7 @@
         cursor: pointer;
         background: transparent;
         border: none;
-        font-size: 14px;
+        // font-size: 14px;
         padding: 5px;
         width: 200px;
       }
