--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -5,7 +5,7 @@
   max-width: 400px;
   display: flex;
   flex-direction: column;
-  padding: 5px;
+  padding: 10px 5px 5px 5px;
 
   .column-header {
     background-color: #2d323a0d;
