--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -5,13 +5,13 @@
   max-width: 400px;
   display: flex;
   flex-direction: column;
-  padding: 10px 5px 5px 5px;
+  padding: 5px 5px 5px 5px;
 
   .column-header {
     background-color: #2d323a0d;
     padding: 8px;
     margin: 0 0 0 0;
-    border: 1px solid rgb(151, 137, 137);
+    border: 1px solid #d4d6d6;
     display: flex;
     align-items: center;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05), 0px 0px 6px rgba(0, 0, 0, 0.15);
@@ -55,6 +55,8 @@
 
 .col-is-dragging {
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
+  background-color: #e4e8ee;
+  border: 1px solid #d4dae4;
   #column-droppable {
     border: none !important;
     background-color: rgb(245, 250, 248) !important;
