--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -12,7 +12,7 @@
     font-family: "Playfair Display", serif;
     display: flex;
     .brand {
-      font-size: 3em;
+      font-size: 2.8em;
       letter-spacing: 3px;
       margin-left: auto;
       margin-right: auto;
@@ -28,8 +28,7 @@
       background-color: rgb(243, 243, 243);
       transition: box-shadow 0.2s ease;
       transition: background-color 0.2s ease;
-      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.16),
-        2px 3px 6px rgba(0, 0, 0, 0.23);
+      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.16), 2px 3px 6px rgba(0, 0, 0, 0.23);
     }
     a {
       color: inherit;
@@ -60,8 +59,7 @@
       background-color: rgb(243, 243, 243);
       transition: box-shadow 0.2s ease;
       transition: background-color 0.2s ease;
-      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23),
-        2px 3px 6px rgba(0, 0, 0, 0.03);
+      box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
     }
     .active-filter {
       padding-right: 76px;
