--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -1,21 +1,23 @@
 #column-draggable {
-  margin: 0 2px;
+  margin: 5px 2px;
   border-radius: 10px;
   min-width: 400px;
   max-width: 400px;
   display: flex;
   flex-direction: column;
   padding: 5px 5px 5px 5px;
-
+  .column-container {
+    box-shadow: 0 0px 7px rgba(0, 0, 0, 0.2);
+    border: 1px solid #d4d6d6;
+    border-radius: 5px 5px 0 0;
+  }
   .column-header {
     background-color: #2d323a0d;
     padding: 8px;
     margin: 0 0 0 0;
-    border: 1px solid #d4d6d6;
     display: flex;
     align-items: center;
-    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.05), 0px 0px 6px rgba(0, 0, 0, 0.15);
-    border-radius: 5px 5px 0 0;
+    border-bottom: 1px solid lightgrey;
 
     .title {
       text-align: center;
@@ -39,11 +41,7 @@
 
   #column-droppable {
     transition: background-color 0.2s ease;
-    border: 1px solid lightgrey;
-    border-top: none;
     border-radius: 0 0 5px 5px;
-    background-color: white;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
   }
 }
 
