--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -1,19 +1,30 @@
 #card-draggable {
-  ::before{
-    box-shadow: 0 0px 3px rgba(0, 0, 0, 0.16);
-  }
   border-bottom: 1px solid lightgrey;
   padding: 5px;
   display: flex;
   align-items: flex-start;
   background-color: white;
   flex-direction: column;
+  position: relative;
+
+  &:before{
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+  }
 
   &:hover {
+    transition: background-color 0.35s ease-out;
     background-color: #e5eae9;
-    transition: background-color, box-shadow 0.35s ease;
+  }
+
+  &:hover:before {
+    transition: box-shadow 0.35s ease-out;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.26);
-    z-index: 10;
   }
 
   .card-draggable-container {
