Add theming initial infrastructure

--- a/src/components/UI/BoardComponents/Card/index.scss
+++ b/src/components/UI/BoardComponents/Card/index.scss
@@ -3,11 +3,11 @@
   padding: 5px;
   display: flex;
   align-items: flex-start;
-  background-color: white;
+  background-color: var(--card-primary);
   flex-direction: column;
   position: relative;
 
-  &:before{
+  &:before {
     content: "";
     position: absolute;
     top: 0;
