--- a/src/components/Pages/Board/Views/index.scss
+++ b/src/components/Pages/Board/Views/index.scss
@@ -8,7 +8,7 @@
   flex-direction: column;
   flex-grow: 1;
   .views-group-name {
-    background-color: #eef1f5;
+    background-color: var(--bg-primary);
     z-index: 2;
     padding: 5px 10px;
     margin-right: 10px;
