--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -5,13 +5,12 @@
 
 .navbar-list {
   align-items: center;
-  background-color: #eef1f5;
+  background-color: var(--bg-primary);
   ul.menu {
     margin: 0 auto;
     align-items: center;
     padding: 0px;
     list-style: none;
-    font-family: "Playfair Display", sans-serif;
     display: flex;
     .brand {
       font-size: 2.8em;
