--- a/src/index.scss
+++ b/src/index.scss
@@ -4,26 +4,38 @@ html {
 body {
   height: 100%;
   margin: 0;
-  input, select, textarea {
-    font-family: 'Lora', serif;
+  input,
+  select,
+  textarea {
+    font-family: "Lora", serif;
   }
+
+  --bg-primary: #eef1f5;
+  --card-primary: #ffffff;
 }
 
 #root,
 #app-container {
   height: 100%;
-  background-color: #eef1f5;
+  background-color: var(--bg-primary);
 }
 
-.drag-overlay {
-  background-color: rgba($color: #aaa, $alpha: 0.8);
-  border: dashed grey 4px;
-  margin: -14px;
-  padding: 14px;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 9999;
-}
+// .drag-overlay {
+//   background-color: rgba($color: #aaa, $alpha: 0.8);
+//   border: dashed grey 4px;
+//   margin: -14px;
+//   padding: 14px;
+//   position: absolute;
+//   top: 0;
+//   bottom: 0;
+//   left: 0;
+//   right: 0;
+//   z-index: 9999;
+// }
+
+// --bg-secondary:
+// --text-primary:
+// --text-secondary:
+// --text-alternate:
+// --shadow-primary:
+// --shadow-secondary:
