--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@ html {
 body {
   height: 100%;
   margin: 0;
+  font-family: "Lora", serif;
   input,
   select,
   textarea {
@@ -19,19 +20,6 @@ body {
   height: 100%;
   background-color: var(--bg-primary);
 }
-
-// .drag-overlay {
-//   background-color: rgba($color: #aaa, $alpha: 0.8);
-//   border: dashed grey 4px;
-//   margin: -14px;
-//   padding: 14px;
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   z-index: 9999;
-// }
 
 // --bg-secondary:
 // --text-primary:
