--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -39,7 +39,7 @@
       margin-left: 5px;
     }
     li {
-      padding: 10px;
+      padding: 10px 20px;
       display: flex;
       align-items: center;
       .icon-title {
@@ -51,7 +51,7 @@
         }
       }
       border-radius: 5px 20px;
-      margin: 0 5px;
+      margin: 0 15px;
     }
     li:not(.brand) {
       cursor: pointer;
