--- a/src/components/Pages/Board/Views/index.scss
+++ b/src/components/Pages/Board/Views/index.scss
@@ -8,11 +8,11 @@
   flex-direction: column;
   flex-grow: 1;
   .views-group-name {
-    background-color: var(--bg-primary);
+    background-color: var(--bg-navbar);
+    box-shadow: var(--bg-shadow);
     z-index: 2;
     padding: 5px 10px;
     margin-right: 10px;
-    box-shadow: 0px 0px 13px 0px rgba(68, 68, 71, 0.16);
     .views-group-name-title {
       writing-mode: vertical-rl;
       padding-top: 10px;
