--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -6,18 +6,20 @@
   display: flex;
   flex-direction: column;
   padding: 5px 5px 5px 5px;
+  .column-empty {
+    min-height: 86px;
+  }
   .column-container {
+    background-color: var(--bg-primary);
     box-shadow: 0 0px 7px rgba(0, 0, 0, 0.2);
-    border: 1px solid #d4d6d6;
+    border: 1px solid var(--card-border);
     border-radius: 5px 5px 0 0;
   }
   .column-header {
-    background-color: #2d323a0d;
     padding: 8px;
     margin: 0 0 0 0;
     display: flex;
     align-items: center;
-    border-bottom: 1px solid lightgrey;
 
     .title {
       text-align: center;
@@ -49,14 +51,4 @@
   cursor: pointer;
   visibility: hidden;
   opacity: 0;
-}
-
-.col-is-dragging {
-  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
-  background-color: #e4e8ee;
-  border: 1px solid #d4dae4;
-  #column-droppable {
-    border: none !important;
-    background-color: rgb(245, 250, 248) !important;
-  }
 }
