--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -1,12 +1,17 @@
 #navbar {
-  box-shadow: 0px 0px 13px 0px rgba(98, 98, 102, 0.16);
+  box-shadow: var(--bg-shadow);
   z-index: 1;
 }
 
 .navbar-list {
   align-items: center;
-  background-color: var(--bg-primary);
+  background-color: var(--bg-navbar);
+  color: var(--navbar-text-color);
+  svg:not([color]) {
+    color: var(--navbar-text-color);
+  }
   ul.menu {
+    height: 5em;
     margin: 0 auto;
     align-items: center;
     padding: 0px;
@@ -14,6 +19,7 @@
     display: flex;
     .brand {
       font-size: 2.8em;
+      font-family: "Lora";
       letter-spacing: 3px;
       margin-left: auto;
       margin-right: auto;
