--- a/src/components/UI/TextAreaInput/index.scss
+++ b/src/components/UI/TextAreaInput/index.scss
@@ -32,6 +32,6 @@
 
 .textarea:hover,
 .textarea:focus {
-  border: 1px solid rgb(167, 167, 167);
+  border: 1px solid var(--card-border);
   padding: 0;
 }
