CSS styling changes.

--- a/src/components/UI/Navbar/components/NavbarList/index.scss
+++ b/src/components/UI/Navbar/components/NavbarList/index.scss
@@ -63,7 +63,7 @@
       cursor: pointer;
     }
     li:not(.brand):hover {
-      background-color: rgb(243, 243, 243);
+      background-color: var(--icon-hover);
       transition: box-shadow 0.2s ease;
       transition: background-color 0.2s ease;
       box-shadow: 2px 3px 6px rgba(0, 0, 0, 0.23), 2px 3px 6px rgba(0, 0, 0, 0.03);
