--- a/src/index.scss
+++ b/src/index.scss
@@ -23,11 +23,12 @@ body {
   --bg-shadow: 0px 0px 13px 0px rgba(98, 98, 102, 0.16);
   --card-border: lightgrey;
   --card-primary: #ffffff;
-  --card-hover: #e5eae9;
-  --column-hover: #f3f3f3;
+  --card-hover: #f3f3f3;
+  --column-hover: var(--card-hover);
   --text-color: black;
   --text-bg-color: #f0f0f0;
   --icon-color: black;
+  --icon-hover: var(--card-hover);
   --modal-icon-color: rgb(26, 25, 25);
 }
 
