More CSS changes

--- a/src/components/UI/BoardComponents/Column/index.scss
+++ b/src/components/UI/BoardComponents/Column/index.scss
@@ -10,7 +10,7 @@
     min-height: 86px;
   }
   .column-container {
-    background-color: var(--bg-primary);
+    background-color: var(--column-primary);
     box-shadow: var(--bg-shadow);
     border: 1px solid var(--card-border);
     border-radius: 5px 5px 0 0;
