--- a/src/components/Pages/Login/Views/SignIn.scss
+++ b/src/components/Pages/Login/Views/SignIn.scss
@@ -4,8 +4,9 @@
     margin-bottom: 1px;
     .signin-button {
       text-align: center;
-      background: dodgerblue;
-      color: white;
+      background-color: var(--login-button-bg-color);
+      color: var(--login-button-color);
+      font-weight: bold;
       width: 100%;
       border: none;
       padding: 10px;
@@ -26,14 +27,16 @@
         font-size: 1.1em;
       }
       .input-field:focus {
-        border: 2px solid dodgerblue;
+        border: 1px solid var(--card-primary);
       }
       .input-icon {
         text-align: center;
         font-size: 1.1em;
         padding: 12px;
-        background: dodgerblue;
-        color: white;
+        background: var(--login-icon-bg-color);
+        svg {
+          color: var(--login-icon-color);
+        }
       }
     }
   }
