--- a/src/components/Pages/Login/index.scss
+++ b/src/components/Pages/Login/index.scss
@@ -1,22 +1,16 @@
 #login {
   height: 100%;
-  background-image: radial-gradient(
-    circle,
-    #b4c7c9,
-    #a5c3cc,
-    #99bed2,
-    #93b8d8,
-    #94b0dc
-  );
+  background-color: var(--bg-primary);
   .login-container {
     border: none;
-    background-color: #f6faf9;
+    background-color: var(--login-primary);
     width: 500px;
     position: absolute;
     top: 40%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    box-shadow: var(--bg-shadow);
     .header {
       display: flex;
       justify-content: center;
