Change input color to black.

--- a/src/components/Pages/Login/Views/SignIn.scss
+++ b/src/components/Pages/Login/Views/SignIn.scss
@@ -25,6 +25,7 @@
         padding: 10px;
         outline: none;
         font-size: 1.1em;
+        color: black;
       }
       .input-field:focus {
         border: 1px solid var(--card-primary);
