--- a/src/index.scss
+++ b/src/index.scss
@@ -17,15 +17,16 @@ body {
   }
 
   --bg-primary: #eef1f5;
-  --bg-navbar: var(--column-primary);
+  --bg-navbar: var(--bg-primary);
   --navbar-text-color: var(--text-color);
-  --modal-bg-color: white;
+  --modal-bg-color: var(--card-primary);
   --bg-shadow: 0px 0px 13px 0px rgba(98, 98, 102, 0.16);
   --card-border: lightgrey;
   --card-primary: #ffffff;
   --card-hover: #ebebeb;
   --column-hover: var(--card-hover);
-  --column-primary: #f3f3f3;
+  --column-primary: var(--bg-primary);
+  --column-shadow: 0px 0px 6px 0px rgba(98, 98, 102, 0.16);
   --text-color: black;
   --text-bg-color: #f0f0f0;
   --icon-color: black;
