--- a/src/components/Pages/Board/Views/List.scss
+++ b/src/components/Pages/Board/Views/List.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: center;
   overflow-y: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 30px;
   .list-col-is-dragging {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
     background-color: rgb(245, 250, 248) !important;
