--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,8 @@ body {
   --text-bg-color: #f0f0f0;
   --icon-color: black;
   --icon-hover: var(--card-hover);
+  --button-color: var(--text-bg-color);
+  --button-hover: var(--card-hover);
   --modal-icon-color: rgb(26, 25, 25);
   --login-primary: var(--card-primary);
   --login-icon-bg-color: #09bc09;
