--- a/src/components/UI/Popup/AcceptCancelButtons/index.scss
+++ b/src/components/UI/Popup/AcceptCancelButtons/index.scss
@@ -2,16 +2,16 @@
   display: flex;
   justify-content: center;
   .button-accept {
-    background-color: rgba(19, 180, 5, 0.7);
+    background-color: var(--button-color);
   }
   .button-accept:hover {
-    background-color: rgba(19, 180, 5, 0.9) !important;
+    background-color: var(--button-hover);
   }
   .button-cancel {
-    background-color: rgba(253, 10, 10, 0.7);
+    background-color: var(--button-color);
   }
   .button-cancel:hover {
-    background-color: rgba(238, 6, 6, 0.8) !important;
+    background-color: var(--button-hover);
   }
   button {
     width: 45%;
@@ -19,7 +19,7 @@
     outline: none;
     padding: 10px 16px;
     border-radius: 10px;
-    color: white;
+    color: var(--text-color);
     cursor: pointer;
   }
   button:first-child {
