Add login-input-focus css variable.

--- a/src/components/Pages/Login/Views/SignIn.scss
+++ b/src/components/Pages/Login/Views/SignIn.scss
@@ -28,7 +28,7 @@
         color: black;
       }
       .input-field:focus {
-        border: 1px solid var(--card-primary);
+        border: 1px solid var(--login-input-focus);
       }
       .input-icon {
         text-align: center;
