--- a/src/index.scss
+++ b/src/index.scss
@@ -39,6 +39,7 @@ body {
   --login-icon-color: #027a02;
   --login-button-bg-color: var(--login-icon-bg-color);
   --login-button-color: #ffffff;
+  --login-input-focus: black;
 }
 
 #root,
