Refactor modals towards a single modal

--- a/src/components/UI/Navbar/components/NavbarPopup/index.scss
+++ b/src/components/UI/Navbar/components/NavbarPopup/index.scss
@@ -2,7 +2,7 @@
   #navbar-popup {
     border-radius: 5px;
     background: var(--modal-bg-color);
-    padding: 10px 0;
+    padding: 10px 10px;
     width: 200px;
     text-align: center;
   }
