Update login button and icons to different colors.

--- a/src/index.scss
+++ b/src/index.scss
@@ -35,10 +35,10 @@ body {
   --button-hover: var(--card-hover);
   --modal-icon-color: rgb(26, 25, 25);
   --login-primary: var(--card-primary);
-  --login-icon-bg-color: #09bc09;
-  --login-icon-color: #027a02;
+  --login-icon-bg-color: #dddddd;
+  --login-icon-color: black;
   --login-button-bg-color: var(--login-icon-bg-color);
-  --login-button-color: #ffffff;
+  --login-button-color: black;
   --login-input-focus: black;
 }
 
