--- a/src/components/UI/MarkdownEditor/MarkdownEditor.scss
+++ b/src/components/UI/MarkdownEditor/MarkdownEditor.scss
@@ -3,6 +3,7 @@
   cursor: pointer;
   p { margin-bottom: 16px; margin-top: 0; }
   min-height: 1em;
+  text-align: initial;
 }
 
 .markdown-preview>:last-child {
