--- a/src/components/UI/Modal/index.scss
+++ b/src/components/UI/Modal/index.scss
@@ -30,7 +30,6 @@
 
 .inner-container {
   background: var(--modal-bg-color);
-  width: 500px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   border-radius: 10px;
   svg:not([color]) {
@@ -39,7 +38,13 @@
 }
 
 .inner-content {
+  flex-direction: column;
   padding: 10px;
   display: flex;
   flex-grow: 1;
+  h1 {
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
