--- a/src/components/UI/Navbar/components/Delete/index.scss
+++ b/src/components/UI/Navbar/components/Delete/index.scss
@@ -1,5 +1,6 @@
 #delete-popup {
-  font-size: 1.3em;
+  width: 200px;
+  text-align: center;
   .component-less {
     padding: 0 10px;
   }
@@ -10,7 +11,7 @@
     display: flex;
     flex-direction: column;
     button {
-      font-size: 1.2em;
+      font-size: 1.7em;
       padding: 10px 16px;
     }
     .delete-popup-button {
