Add tooltips to navbar and card.

--- a/src/index.scss
+++ b/src/index.scss
@@ -40,6 +40,8 @@ body {
   --login-button-bg-color: var(--login-icon-bg-color);
   --login-button-color: black;
   --login-input-focus: black;
+  --tooltip-text-color: #ffffff;
+  --tooltip-bg-color: #222;
 }
 
 #root,
