--- a/src/components/Pages/Board/Views/List.scss
+++ b/src/components/Pages/Board/Views/List.scss
@@ -2,12 +2,13 @@
   display: flex;
   justify-content: center;
   overflow-y: auto;
+  overflow-x: hidden;
   margin-left: auto;
   margin-right: auto;
   margin-top: 30px;
   .list-col-is-dragging {
     box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.16), 4px 4px 4px rgba(0, 0, 0, 0.23) !important;
-    background-color: rgb(245, 250, 248) !important;
+    background-color: var(--card-hover) !important;
     border: none !important;
   }
   #column-droppable {
